# turkic_transliteration

./: -  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  INTEGRATION_PLAN_LID218E.md  LICENSE  Makefile  README.md  README.stub.md  app.py  demo_translit.py  env.yml  kk_ipa.txt  mypy.ini  pyproject.toml  pytest.ini  release.sh  simple_demo.py  sitecustomize.py  test_lid218e.py  test_uzbek_longer.py  turkic_tools.py  web_demo.py
.github/: HF_SPACE_SETUP.md
.github/workflows/: sync-to-hf-space.yml
data/: README.md  kk_latin.txt
data/samples/: sample_kk.txt
docs/: CONTRIBUTING.md  index.md  setup_guide.md  tu-proceedings-ipa-section.tex  web_ui.md  windows-installation-troubleshooting.md  windows_pyicu_guide.md
examples/: README.md  demo_translit.py  simple_demo.py  web_demo.py
examples/web/: app.py  web_demo.py
scripts/: README.md  batch_translit.sh  build_spm.py  filter_russian.py  get_pyicu_wheel.py  run.ps1  run_leven.py  setup_dev.py
scripts/release/: release.ps1  release.sh
src/turkic_translit/: __init__.py  cli.py  core.py  error_service.py  lang_filter.py  lang_utils.py  langid.py  logging_config.py  model_utils.py  patches.py  pipeline.py  pyicu_install.py  sanity.py  tokenizer.py  transliterate.py  web_utils.py
src/turkic_translit/cli/: __init__.py  _net_utils.py  build_spm.py  corpora.yaml  download_corpus.py  eval_lm.py  filter_russian.py  pyicu_install.py  run_leven.py  train_lm.py  train_spm.py  translit.py
src/turkic_translit/lm/: __init__.py  data.py  eval.py  similarity.py  tokenizer.py  train.py
src/turkic_translit/rules/: README.md  ar_lat.rules  az_ipa.rules  fi_ipa.rules  kk_ipa.rules  kk_lat2023.rules  ky_ipa.rules  tr_ipa.rules  tr_lat.rules  ug_ipa.rules  uyghur_ipa.rules  uz_ipa.rules  uz_ipa_cyr.rules  uz_ipa_lat.rules  uzc_ipa.rules
src/turkic_translit/web/: web_demo.py  web_utils.py
src/turkic_translit/web/tabs/: __init__.py  corpus.py  direct.py  mutual.py  sentencepiece.py
tests/: __init__.py  expected_lat.txt  sample_ar.txt  sample_cy.txt  test_azerbaijani_ipa_letters.py  test_azerbaijani_northwind.py  test_cli.py  test_cli_integration.py  test_cli_lm.py  test_download_corpus.py  test_fasttext.py  test_finnish_ipa_letters.py  test_finnish_maamme.py  test_kazakh_ipa_letters.py  test_kazakh_northwind.py  test_kyrgyz_ipa_letters.py  test_kyrgyz_northwind.py  test_kyrgyz_words_mccollum.py  test_lang_filter.py  test_lang_filter_new.py  test_langid_fasttext.py  test_links_alive.py  test_model_utils.py  test_net_utils.py  test_train_spm.py  test_translit.py  test_transliterate_token.py  test_turkish_ipa_letters.py  test_turkish_northwind.py  test_uyghur_ipa_letters.py  test_uyghur_northwind.py  test_uzbek_cyr_ipa_letters.py  test_uzbek_lat_ipa_letters.py  test_uzbek_northwind.py  test_verification.py  test_web_file_handling.py
turkic_translit/: __init__.py  cli.py  core.py  logging_config.py  patches.py  sanity.py
turkic_translit/rules/: ar_lat.rules  kk_ipa.rules  kk_lat2023.rules  ky_ipa.rules  ky_lat2023.rules  kz_lat2023.rules
turkic_transliterate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
