[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "turkic-transliterate"
version = "0.1.1"
description = "Deterministic Latin and IPA transliteration for Kazakh, Kyrgyz, plus tokenizer/glue scripts."
authors = [ {name="Austin Wagner", email="awagner@uci.edu"} ]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = ["kazakh", "kyrgyz", "transliteration", "ipa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic"
]

dependencies = [
    # Core dependencies (alphabetized)
    "epitran>=1.0,<1.27",           # 1.26.0 is the latest on PyPI
    # Universal fasttext-wheel for all platforms and Python 3.10-3.13
    "fasttext-wheel==0.9.2",
    "numpy<2",
    "packaging>=23.0",              # Used in tests/test_fasttext.py
    "panphon>=0.20,<0.22",          # 0.21.2 is the newest published wheel
    # PyICU is required, but Windows users must install the correct wheel manually. See README and scripts/get_pyicu_wheel.py for help.
    "PyICU>=2.15",
    "pytest>=8.0",                  # Test runner
    "rapidfuzz>=3.5",
    "rich>=13.7",                   # Color-aware logging and console output
    "sentencepiece>=0.2.0"
]

[project.optional-dependencies]
# winlid dependency kept for backward compatibility but empty since fasttext-wheel is now in main dependencies
winlid = []

# Development tools
dev = ["black", "ruff"]
# User interface dependencies
ui = ["gradio"]

[project.scripts]
turkic-translit = "turkic_translit.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["turkic_translit"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"turkic_translit" = ["rules/*.rules"]
